modified to Flexbox design

--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Rod Parker-Yules Portfolio</title>
 </head>
 
-<body>
-<main>
-       <!-- The header is a cropped stock image with my name  -->
-    <header>
-        <h1 class="header">Rodney Parker-Yules</h1>
+   
+   <!-- The header is a cropped stock image with my name  -->
+    <header class="main-header">
+        <h1>Rodney Parker-Yules</h1>
     </header>
+ 
+<body>
+    <main> 
+    <section>
         <div>
-            <ul class="navigation">
+            <ul>
                 <li class="link" style="display:inline"><a href="#about_me">About Me</a></li>
                 <li class="link" style="display:inline"><a href="#work">My Work</a></li>
                 <li class="link" style="display:inline"><a href="#contact">Contact Me</a></li>
                 <li class="link" style="display:inline"><a href="#resume">Resume</a></li>    
             </ul>
         </div>        
-
+    </section>
 
         
     </section>
@@ -58,11 +62,13 @@
         </div>
 
     </section>       
-    
+
+</main>  
+  
         <!--Section 3 - contact details-->
     <section>
-        <div class="container3">
-            <h2 class="container3_title">Contact Me:</h2>            
+        <div class="container3">  
+        <h2 class="container3_title">Contact Me:</h2>     
             <ul>
                 <li class="contact_link" style="display:inline"><strong>Mobile:</strong> <a href="#">0413 703 653</a></li>
                 <li class="contact_link" style="display:inline"><strong>Email:</strong> <a href="#">rod@maintenancecrewaus.com</a></li>
@@ -72,6 +78,9 @@
         </div>          
     </section>       
 
+
+
+
     <section>
         <div class="footer">
             <h4>&copy Created by T21 Group Pty Limited</h4>
@@ -79,8 +88,6 @@
         </div>
     </section>
 
-</main> 
 </body>
-
 </html>
 
