fixed most of the bugs - all but 1

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
         <!--Section 2 - This is where my projects will be stored, each with a link to the website-->
     <section class="container2 align">
-        <div><h2 class="container2_title">My Work:</h2></div>  
+        <h2 class="container2_title">My Work:</h2> 
 
         <div>
-            <img class="box" src="./assets/images/egypt.jpg" alt="Project 1" width="900" height="300"/>      
+            <img class="box" src="./assets/images/egypt.jpg" alt="Project 1" width="500" height="300"/>      
             <h3 class="label">Explore Egypt</h3>   
         </div>
 
         <div>
-            <img class="box" src="./assets/images/desert_sky.jpg" alt="Project 2" width="400" height="300"/>      
+            <img class="box align" src="./assets/images/desert_sky.jpg" alt="Project 2" width="400" height="300"/>      
             <h3 class="label">Desert Sky</h3>   
         </div>
 
